--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 CSCI-P423 Spring 2012 Git repository for srwaggon.
 
-You may (and are encouraged to) modify this file to explain the
-organization of your repository and how to properly use your compiler.
+Each assignment is designated by its own branch whereas the most recently finished branch should reside in master, as it is the jumping-off point for the next assignment.
+
+Furthermore, each pass resides in its own named file within the compiler/ directory, simply to make editing and copy-pasta'ing easier between passes.
